--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# paper results
+*.mp4
+out/
+pti_out/
+interpolation_out/
+models/
+
+# viz
+viz/
+visualizer.py
